--- a/roles/fonts/tasks/main.yml
+++ b/roles/fonts/tasks/main.yml
@@ -9,8 +9,8 @@
       - noto-fonts
       - ttf-liberation
       - ttf-ubuntu-font-family
-      - ttf-ms-win10
       - ttf-nerd-fonts-symbols
+      - ttf-ms-win10-auto
 
 - name: create .config/fontconfig directory
   ansible.builtin.file:
