--- a/roles/archbase/tasks/main.yml
+++ b/roles/archbase/tasks/main.yml
@@ -40,6 +40,14 @@
     mode: '0755'
     state: directory
 
+- name: create projects directory
+  ansible.builtin.file:
+    path: ~/projects
+    owner: "{{archusername.stdout}}"
+    group: "{{archgroup.stdout}}"
+    mode: '0755'
+    state: directory
+
 - name: create .config/systemd/user directory
   ansible.builtin.file:
     path: ~/.config/systemd/user
