Adding droid font.

--- a/roles/fonts/tasks/main.yml
+++ b/roles/fonts/tasks/main.yml
@@ -8,6 +8,7 @@
       - cantarell-fonts
       - noto-fonts
       - ttf-dejavu
+      - ttf-droid
       - ttf-liberation
       - ttf-ubuntu-font-family
       - ttf-nerd-fonts-symbols
