--- a/desktop.yml
+++ b/desktop.yml
@@ -14,6 +14,7 @@
     - nvidia
     - fonts
     - gtk
+    - qt
     - sound
     - mkinitcpio
     - grub
@@ -25,3 +26,4 @@
     - applauncher
     - terminal
     - code
+    - makemkv
