--- a/roles/nvidia/tasks/main.yml
+++ b/roles/nvidia/tasks/main.yml
@@ -11,6 +11,7 @@
       - nvidia
       - nvidia-dkms
       - nvidia-settings
+      - lib32-nvidia-utils # steam dependency
 
 - name: setup nvidia xorg config
   ansible.builtin.copy:
