--- a/roles/archbase/tasks/main.yml
+++ b/roles/archbase/tasks/main.yml
@@ -92,3 +92,15 @@
     group: "{{archgroup.stdout}}"
     mode: '0755'
     state: directory
+
+# Commenting out by default.
+# Uncomment if you experience keyserver connectivity problems    
+# - name: change default keyserver to keyserver.ubuntu.com
+#   ansible.builtin.copy:
+#     src: files/gpg.conf
+#     dest: /etc/pacman.d/gnupg/gpg.conf
+#     owner: root
+#     group: root
+#     mode: '0644'
+#     backup: yes
+#   become: yes
