--- a/roles/sound/tasks/main.yml
+++ b/roles/sound/tasks/main.yml
@@ -6,6 +6,7 @@
     use: paru
     name:
       - pipewire
+      - pipewire-alsa
       - pipewire-pulse
       - pamixer
   register: pipewireinstall
