Updating the gtk install dracula icons task so it doesn't download the zip file during every ansible run.

--- a/roles/gtk/tasks/main.yml
+++ b/roles/gtk/tasks/main.yml
@@ -52,4 +52,5 @@
   ansible.builtin.unarchive:
     src: https://github.com/dracula/gtk/files/5214870/Dracula.zip
     dest: ~/.icons/
+    creates: ~/.icons/Dracula
     remote_src: yes
