--- a/roles/picom/files/picom.conf
+++ b/roles/picom/files/picom.conf
@@ -23,14 +23,11 @@ rounded-corners-exclude = [
   "class_g = 'awesome'",
   "class_g = 'URxvt'",
   "class_g = 'XTerm'",
-  #"class_g = 'kitty'",
   "class_g = 'Alacritty'",
   "class_g = 'Polybar'",
   "class_g = 'i3bar'",
-  "class_g = 'code-oss'",
-  #"class_g = 'TelegramDesktop'",
   "class_g = 'firefox'",
-  "class_g = 'Thunderbird'"
+  "class_g = 'dwm'"
 ];
 round-borders = 1;
 round-borders-exclude = [
