--- a/roles/suckless/tasks/main.yml
+++ b/roles/suckless/tasks/main.yml
@@ -11,6 +11,7 @@
     use: paru
     name:
       - j4-dmenu-desktop
+      - playerctl
 
 - name: create .local/share/dwm directory
   ansible.builtin.file:
